# Quadrotor

./: .gitignore  README.md  program.md  最小功能逐步开发调试流程.md
analysis/: vel_position_20260721_145414.csv  vel_position_20260721_154612.csv
script/: record_vel_position.py
src/: px4param.params
src/carto/: CMakeLists.txt  backpack_2d_localization.lua  my_backpack_2d_localization.launch.py  my_laser_with_imu.launch.py  my_laser_with_imu.lua  package.xml
src/carto/map/: flight_area.pbstream
src/lsn10_lidar/lslidar_driver/params/lidar_uart_ros2/: lsm10.yaml  lsn10.yaml  lsn10p.yaml
src/mavlink/pymavlink/dialects/v10/: ardupilotmega.py
src/mavlink/pymavlink/dialects/v20/: ardupilotmega.py
src/mavros/mavros/launch/: px4.launch  px4_config.yaml  px4_pluginlists.yaml
src/offboard_control/: AGENT.md  CMakeLists.txt  package.xml
src/offboard_control/scripts/: compare_input_shaping.py  plot_pd_velocity.py  plot_simple_setpoint_actual.py  point.txt
src/offboard_control/src/: best_path_node.cpp  ground_station_path_node.cpp  offboard_node.cpp  offboard_node_v2.cpp  rpi5_servo_pwm_example.cpp  simple_offboard_node.cpp  vel_control_offboard_node.cpp  waypoint_offboard_node.cpp  yolo_snapshot_service_node.cpp
src/quadrotor_ground_station/: CMakeLists.txt  package.xml
src/quadrotor_ground_station/launch/: best_path_planner.launch.py  hmi_touch_verify.launch.py  serial_loopback_test.launch.py
src/quadrotor_ground_station/src/: best_path_planner.cpp  hmi_touch_verify_node.cpp  serial_loopback_test_node.cpp
src/test/: yolo_snapshot_request_node.cpp
src/test/STP23_ROS1_SDK/sdk_ldlidar_stp23_20220415-17-50/ros_sdk/src/ldlidar/launch/: stp23.launch
src/test/STP23_ROS1_SDK/sdk_ldlidar_stp23_20220415-17-50/ros_sdk/src/ldlidar/src/: main.cpp
src/test/stp23_ros2/: CMakeLists.txt  package.xml
src/test/stp23_ros2/config/: stp23.yaml
src/test/stp23_ros2/include/stp23_ros2/: cmd_interface_linux.h  lipkg.h
src/test/stp23_ros2/launch/: stp23.launch.py
src/test/stp23_ros2/msg/: STP.msg
src/test/stp23_ros2/src/: cmd_interface_linux.cpp  lipkg.cpp  stp23_node.cpp
src/track2vision/: CMakeLists.txt  package.xml
src/track2vision/scripts/: record_ev_local_yaw.py  tf_jump_recorder.py
src/track2vision/src/: imu_covariance_filter.cpp  laser_transfer.cpp  tf_broadcaster.cpp  tracked2vision.launch.py
